Thu Jul  8 14:48:54 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* hppa-tdep.c (hppa_push_arguments): Allocate enough space for
	arguments.

	* hppa-tdep.c: Change _initialize_hppab_tdep to _initialize_hppa_tdep.

Thu Jul  8 08:22:05 1993  Doug Evans  (dje@canuck.cygnus.com)

	* config/h8300/tm-h8300.h: (REGISTER_TYPES): Adjust for h8/300h.
	(REGISTER_RAW_SIZE): Ditto.
	(REGISTER_VIRTUAL_TYPE): Use builtin_type_unsigned_long for regs
	on the h8/300h (ints may still be 16 bits).
	(EXTRACT_RETURN_VALUE, STORE_RETURN_VALUE,
	EXTRACT_STRUCT_VALUE_ADDRESS): Add FIXME's for h8/300h.  Some
	thought needed here.

	* h8300-tdep.c (print_insn): Call print_insn_h8300h if h8/300h.
	(examine_prologue): reg_save_depth is 4 if h8/300h.

	* findvar.c (read_register): Provide some support for 64 bit regs.
	(write_register): Ditto.

Wed Jul  7 14:30:00 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* config/mips/nm-riscos.h: machine/machparam.h is always the right
	place to look for BSD43_NBPG, not machine/vmparam.h

	* infcmd.c (run_stack_dummy): New argument name.
	Change error message in (another) attempt to make it comprehensible.
	* valops.c (call_function_by_hand): Pass name to run_stack_dummy.
	* symtab.h: Declare demangle and asm_demangle since macros use them.

	* eval.c (evaluate_subexp): Add comment about calling a member
	function of a variable in a register.

	* expression.h: Clean up comment about string in STRUCT_STRUCT etc.

	* config/{rs6000/tm-rs6000.h,sparc/tm-sparc.h,pyr/tm-pyr.h},
	inferior.h (PC_IN_CALL_DUMMY) [ON_STACK]: Add comments about stack
	frame tops and bottoms.

	* frame.h, blockframe.c, stack.c, a29k-tdep.c,
	config/gould/tmp-{pn,np1}.h,
	config/{sparc/tm-sparc.h,pyr/tm-pyr.h,vax/tm-vax.h}: Remove field
	next_frame from struct frame_info.  It has no purpose beyond
	->next->frame and is an artifact from GDB 2.8.

Tue Jul  6 11:51:18 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* Makefile.in: Remove gdb before creating a new one.